--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,33 +1,13 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
     "configurations": [
         {
-            "name": ".NET Core Launch (web)",
-            "type": "coreclr",
+            "name": "Docker .NET Core Launch",
+            "type": "docker",
             "request": "launch",
-            "preLaunchTask": "build",
-            "program": "${workspaceFolder}/ThetaGangTracker/bin/Debug/netcoreapp3.1/ThetaGangTracker.dll",
-            "args": [],
-            "cwd": "${workspaceFolder}/ThetaGangTracker",
-            "stopAtEntry": false,
-            // "serverReadyAction": {
-            //     "action": "openExternally",
-            //     "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
-            // },
-            "env": {
-                "ASPNETCORE_ENVIRONMENT": "Development"
-            },
-            "sourceFileMap": {
-                "/Views": "${workspaceFolder}/Views"
+            "preLaunchTask": "docker-run: debug",
+            "netCore": {
+                "appProject": "${workspaceFolder}/ThetaGangTracker/ThetaGangTracker.csproj"
             }
-        },
-        {
-            "name": ".NET Core Attach",
-            "type": "coreclr",
-            "request": "attach"
         }
     ]
 }
