--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,17 @@ services:
       dockerfile: ThetaGangTracker/Dockerfile
     ports:
       - 4040:4040
+  postgres:
+    image: postgres
+    restart: always
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+    logging:
+      options:
+        max-size: 10m
+        max-file: "3"
+    ports:
+      - 2020:2020
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data
