Adding JWT Auth to project

--- a/ThetaGangTracker/appsettings.json
+++ b/ThetaGangTracker/appsettings.json
@@ -6,5 +6,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+      "DefaultConnection": "Server=localhost;Port=2020;Database=theta_gang_tracker;User Id=postgres;Password=postgres"
+  },
+  "Jwt": {    
+    "Key": "akdf_9138_2142_aldf_1238_lakE_23k2_kn19_k128",    
+    "Issuer": "ThetaGangTracker",
+    "ExpMin": 10080    
+  },
   "AllowedHosts": "*"
 }
