--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,9 @@
             "preLaunchTask": "docker-run: debug",
             "netCore": {
                 "appProject": "${workspaceFolder}/ThetaGangTracker/ThetaGangTracker.csproj"
+            },
+            "launchBrowser": {
+                "enabled": false
             }
         }
     ]
