--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,27 @@
 # Please refer https://aka.ms/HTTPSinContainer on how to setup an https developer certificate for your ASP .NET Core service.
 
-version: '3.4'
+version: "3.4"
 
 services:
-  thetagangtracker:
-    image: thetagangtracker
-    build:
-      context: .
-      dockerfile: ThetaGangTracker/Dockerfile
-    ports:
-      - 4040:4040
-  postgres:
-    image: postgres
-    restart: always
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-    logging:
-      options:
-        max-size: 10m
-        max-file: "3"
-    ports:
-      - 2020:2020
-    volumes:
-      - ./postgres-data:/var/lib/postgresql/data
+    thetagangtracker:
+        image: thetagangtracker
+        build:
+            context: .
+            dockerfile: ThetaGangTracker/Dockerfile
+        ports:
+            - 4040:4040
+    postgres:
+        image: postgres
+        restart: always
+        environment:
+            - POSTGRES_USER=postgres
+            - POSTGRES_PASSWORD=postgres
+        logging:
+            options:
+                max-size: 10m
+                max-file: "3"
+        ports:
+            - 2020:2020
+        volumes:
+            - ./postgres-data:/var/lib/postgresql/data
+            - ./sql:/scripts
