--- a/ThetaGangTracker/appsettings.json
+++ b/ThetaGangTracker/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-      "DefaultConnection": "Server=localhost;Port=2020;Database=theta_gang_tracker;User Id=postgres;Password=postgres"
+      "DefaultConnection": "Host=pgdb;Port=5432;Database=theta_gang_tracker;Username=postgres;Password=postgres"
   },
   "Jwt": {    
     "Key": "akdf_9138_2142_aldf_1238_lakE_23k2_kn19_k128",    
