--- a/ThetaGangTracker/ThetaGangTracker.csproj
+++ b/ThetaGangTracker/ThetaGangTracker.csproj
@@ -5,5 +5,8 @@
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3"/>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.11"/>
+    <PackageReference Include="Npgsql" Version="5.0.10"/>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3"/>
+    <PackageReference Include="Dapper" Version="2.0.90"/>
   </ItemGroup>
 </Project>
