--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,12 @@ services:
             dockerfile: ThetaGangTracker/Dockerfile
         ports:
             - 4040:4040
+        networks:
+            - backend
     postgres:
         image: postgres
         restart: always
+        container_name: pgdb
         environment:
             - POSTGRES_USER=postgres
             - POSTGRES_PASSWORD=postgres
@@ -21,7 +24,12 @@ services:
                 max-size: 10m
                 max-file: "3"
         ports:
-            - 2020:2020
+            - 5432:5432
         volumes:
             - ./postgres-data:/var/lib/postgresql/data
             - ./sql:/scripts
+        networks:
+            - backend
+
+networks:
+    backend:
