--- a/ThetaGangTracker/appsettings.json
+++ b/ThetaGangTracker/appsettings.json
@@ -14,5 +14,16 @@
     "Issuer": "ThetaGangTracker",
     "ExpMin": 10080    
   },
+  "AuthSettings": {
+    "Username": {
+        "MinLength": 4
+    },
+    "Password": {
+        "MinLength": 8,
+        "RequireUppercase": true,
+        "RequireNumber": true,
+        "RequireSymbol": true
+    }
+  },
   "AllowedHosts": "*"
 }
