Renaming to Gatekeeper
Originally this was going to be a larger project, but I decided I wanted to build this out as an authentication microservice for use in many projects.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "request": "launch",
             "preLaunchTask": "docker-run: debug",
             "netCore": {
-                "appProject": "${workspaceFolder}/ThetaGangTracker/ThetaGangTracker.csproj"
+                "appProject": "${workspaceFolder}/Gatekeeper/Gatekeeper.csproj"
             },
             "launchBrowser": {
                 "enabled": false
