--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/ThetaGangTracker/ThetaGangTracker.csproj",
+                "${workspaceFolder}/Gatekeeper/Gatekeeper.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
@@ -19,7 +19,7 @@
             "type": "process",
             "args": [
                 "publish",
-                "${workspaceFolder}/ThetaGangTracker/ThetaGangTracker.csproj",
+                "${workspaceFolder}/Gatekeeper/Gatekeeper.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
@@ -32,7 +32,7 @@
             "args": [
                 "watch",
                 "run",
-                "${workspaceFolder}/ThetaGangTracker/ThetaGangTracker.csproj",
+                "${workspaceFolder}/Gatekeeper/Gatekeeper.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
@@ -43,14 +43,14 @@
             "label": "docker-build: debug",
             "dependsOn": ["build"],
             "dockerBuild": {
-                "tag": "thetagangtracker:dev",
+                "tag": "gatekeeper:dev",
                 "target": "base",
-                "dockerfile": "${workspaceFolder}/ThetaGangTracker/Dockerfile",
+                "dockerfile": "${workspaceFolder}/Gatekeeper/Dockerfile",
                 "context": "${workspaceFolder}",
                 "pull": true
             },
             "netCore": {
-                "appProject": "${workspaceFolder}/ThetaGangTracker/ThetaGangTracker.csproj"
+                "appProject": "${workspaceFolder}/Gatekeeper/Gatekeeper.csproj"
             }
         },
         {
@@ -58,13 +58,13 @@
             "label": "docker-build: release",
             "dependsOn": ["build"],
             "dockerBuild": {
-                "tag": "thetagangtracker:latest",
-                "dockerfile": "${workspaceFolder}/ThetaGangTracker/Dockerfile",
+                "tag": "gatekeeper:latest",
+                "dockerfile": "${workspaceFolder}/Gatekeeper/Dockerfile",
                 "context": "${workspaceFolder}",
                 "pull": true
             },
             "netCore": {
-                "appProject": "${workspaceFolder}/ThetaGangTracker/ThetaGangTracker.csproj"
+                "appProject": "${workspaceFolder}/Gatekeeper/Gatekeeper.csproj"
             }
         },
         {
@@ -78,10 +78,10 @@
                         "hostPort": 4040
                     }
                 ],
-                "network": "thetagangtracker_backend"
+                "network": "gatekeeper_backend"
             },
             "netCore": {
-                "appProject": "${workspaceFolder}/ThetaGangTracker/ThetaGangTracker.csproj",
+                "appProject": "${workspaceFolder}/Gatekeeper/Gatekeeper.csproj",
                 "enableDebugging": true
             }
         },
@@ -91,7 +91,7 @@
             "dependsOn": ["docker-build: release"],
             "dockerRun": {},
             "netCore": {
-                "appProject": "${workspaceFolder}/ThetaGangTracker/ThetaGangTracker.csproj"
+                "appProject": "${workspaceFolder}/Gatekeeper/Gatekeeper.csproj"
             }
         }
     ]
