--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -1,16 +1,16 @@
 # Please refer https://aka.ms/HTTPSinContainer on how to setup an https developer certificate for your ASP .NET Core service.
 
-version: '3.4'
+version: "3.4"
 
 services:
-  thetagangtracker:
-    image: thetagangtracker
-    build:
-      context: .
-      dockerfile: ThetaGangTracker/Dockerfile
-    ports:
-      - 4040:4040
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-    volumes:
-      - ~/.vsdbg:/remote_debugger:rw
+    gatekeeper:
+        image: gatekeeper
+        build:
+            context: .
+            dockerfile: Gatekeeper/Dockerfile
+        ports:
+            - 4040:4040
+        environment:
+            - ASPNETCORE_ENVIRONMENT=Development
+        volumes:
+            - ~/.vsdbg:/remote_debugger:rw
